fix: cropping

--- a/style.css
+++ b/style.css
@@ -92,10 +92,6 @@
 		overflow: auto !important;
 	}
 
-	body {
-		overflow: hidden;
-	}
-
 	#swap {
 		@apply scroll-mt-12 mb-0 md:mb-44;
 	}
